# data_analysis_mpr

./: .gitignore  README.md  cheatsheet.md  pyproject.toml  requirements.txt
0_get_data_python_client/: PC_get_Buildings_Devices_LayoutID.ipynb  PC_get_counter_errors.ipynb  PC_get_sensors_reading.ipynb  PC_get_sensors_readingfunction.ipynb  Python_client_get_data.ipynb
0_get_data_python_client/.ipynb_checkpoints/: PC_explore_modular_system-checkpoint.ipynb  PC_explorer-checkpoint.ipynb  PC_get_Buildings_Devices_LayoutID-checkpoint.ipynb  PC_get_counter_errors-checkpoint.ipynb  Python_client_get_data-checkpoint.ipynb
1_counter_cleaner_issues/: Analysis_current_counter.ipynb  _WITH_LatestCreated_AS_SELECT_dccm_sensor_id_MAX_dccm_created_at_202505221126.csv
1_counter_cleaner_issues/.ipynb_checkpoints/: Analysis_current_counter-checkpoint.ipynb
2_layout_id_python_client/: Building_filter.ipynb  Building_filter_fws.ipynb  Untitled.ipynb  buildingsID_VS_layout_id.csv  generate_sensor_placement.ipynb  layout_id_analyse-simple.ipynb  layout_id_analyse.ipynb  top_20_grouping.ipynb
2_layout_id_python_client/.ipynb_checkpoints/: generate_sensor_placement-checkpoint.ipynb  layout_id_analyse-checkpoint.ipynb  top_20_grouping-checkpoint.ipynb
3_rms-api/: RMS-API.ipynb  rms_api_example.py
3_rms-api/.ipynb_checkpoints/: rms_api-checkpoint.py  rms_models-checkpoint.py  rms_status_api-checkpoint.py  rmsmpr-checkpoint.env
gf_data_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
